--- a/menu.html
+++ b/menu.html
@@ -422,7 +422,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="cell">
+                     <div class="cell">
     				        <div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
@@ -430,8 +430,8 @@
     								<p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
-    					</div> -->
-    					<!-- <div class="cell">
+    					</div> 
+    				<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Whoop_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Whoop">
@@ -439,7 +439,7 @@
     								<p>Tre biscotti al cioccolato ripieni di delicata crema al burro di arachidi.<span class=""><br><small>Allergeni: Latte, Uova, Arachidi</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
