--- a/menu.html
+++ b/menu.html
@@ -395,7 +395,7 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                       <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/PannaCotta_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Panna Cotta">
@@ -403,7 +403,7 @@
                                     <p>Morbida e vellutata. Ricoperta a scelta con cioccolato o frutti di bosco.<span class=""><br><small>Allergeni: Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -413,7 +413,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Crumble_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Crumble">
@@ -421,7 +421,7 @@
                                     <p>Crema pasticcera su croccante crumble di farina di riso, cannella e scaglie di cioccolato fondente.<span class=""><br><small>Allergeni: Latte, Uova</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                      <div class="cell">
     				        <div class="card">
     							<div class="card-section">
@@ -583,7 +583,7 @@
     								<p class="">Bionda tedesca non amara 4,9%. Birrificio Mönchshof.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    				<!--	</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -591,7 +591,7 @@
     								<p class="">Weisse 5,4%. Birrificio Kapuziner.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
