--- a/menu.html
+++ b/menu.html
@@ -395,7 +395,7 @@
     							</div>
     						</div>
     					</div>
-                       <!-- <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/PannaCotta_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Panna Cotta">
@@ -422,7 +422,7 @@
                                 </div>
                             </div>
                         </div> -->
-                     <div class="cell">
+                        <div class="cell">
     				        <div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
@@ -431,7 +431,7 @@
     							</div>
     						</div>
     					</div> 
-    				<div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Whoop_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Whoop">
@@ -440,7 +440,7 @@
     							</div>
     						</div>
     					</div> 
-                       <!-- <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
@@ -583,15 +583,15 @@
     								<p class="">Bionda tedesca non amara 4,9%. Birrificio Mönchshof.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    				<!--	</div>
-    					<div class="cell">
+    					</div>
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Weisse<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Weisse 5,4%. Birrificio Kapuziner.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>  -->
     				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
