--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -370,8 +370,8 @@
     				<ul class="orari-footer-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
     					<li><span>Martedì:</span><time>Chiuso</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
-    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Mercoledì:</span><time>Chiuso</time></li>
+    					<li><span>Giovedì:</span><time>Chiuso</time></li>
     					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
     					<li><span>Domenica:</span><time>19 - 22</time></li>
