--- a/asporto.html
+++ b/asporto.html
@@ -56,7 +56,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<p -hidden>Aperti Venerdì, Sabato e DOmenica</p>
+    			<p -hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
     		</div>
             <!-- <div class="small-12 cell callout primary"> 
                 <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
