--- a/menu.html
+++ b/menu.html
@@ -616,14 +616,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Hattori Hanzo<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">Doppia IPA 8,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -757,6 +757,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Schwarze 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mönchshof. Birra scura tedesca 4,9%. Birra dal vellutato aroma di malto tostato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> 
     				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
