--- a/menu.html
+++ b/menu.html
@@ -139,7 +139,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
@@ -147,7 +147,7 @@
     								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta. Serviti con pane e coleslaw.<span class=""><br><small>Allergeni: Latte, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
