--- a/asporto.html
+++ b/asporto.html
@@ -56,7 +56,8 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<p hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
+    			<p -hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
+                <p>Venerdì 26 chiusi.</p>
     		</div>
             <!-- <div class="small-12 cell callout primary"> 
                 <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
@@ -65,7 +66,7 @@
             </div> -->
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -108,7 +109,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" -hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -124,7 +125,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" -hidden>
+    	<div class="grid-container" hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
