--- a/menu.html
+++ b/menu.html
@@ -653,14 +653,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+        				<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Weisse 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Kapuziner. Weisse 5,4%. Gusto equilibrato, con dolci sapori di malto, frutta e le immancabili note speziate.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
