--- a/menu.html
+++ b/menu.html
@@ -227,12 +227,13 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+            
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
-                                    <h3>Autunno<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-                                    <p>Burger di manzo, scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <h3>Inverno<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
+                                    <p>Burger di manzo, pecorino, bacon croccante, erbe di campo.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div> -->
@@ -361,7 +362,7 @@
     							</div>
     						</div>
     					</div> 
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CostineBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine BBQ">
@@ -369,7 +370,7 @@
     								<p>Costine di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Glutine, Pesce, Semi di Sesamo, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
