--- a/menu.html
+++ b/menu.html
@@ -236,7 +236,7 @@
                                     <p>Burger di manzo, pecorino, bacon croccante, erbe di campo.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
