--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,7 @@
     	<div class="grid-container">
             <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
                 <div class="small-12 cell">
-                    <h2>Aperitivo</h2>
+                    <h2>Aperitivo 31 dicembre<br>dalle 18.00 alle 21.00</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
