--- a/asporto.html
+++ b/asporto.html
@@ -56,6 +56,10 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
+                <div class="small-12 cell callout primary">
+                    <p><strong>Mercoledì 31 dicembre facciamo asporti dalle 18 alle 21</strong>.</p>  
+                    <p>Puoi ordinare il giorno stesso online o scrivendoci tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a>.</p>
+                </div>
     			<p hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
     		</div>
             <!-- <div class="small-12 cell callout primary"> 
@@ -65,9 +69,21 @@
             </div> -->
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
+                    <div class="cell">
+                        <button type="button" class="button orario-btn">18:00</button>
+                    </div>
+                    <div class="cell">
+                        <button type="button" class="button orario-btn">18:15</button>
+                    </div>
+                    <div class="cell">
+                        <button type="button" class="button orario-btn">18:30</button>
+                    </div>
+                    <div class="cell">
+                        <button type="button" class="button orario-btn">18:45</button>
+                    </div>
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">19:00</button>
     			    </div>
@@ -92,7 +108,7 @@
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">20:45</button>
     			    </div>
-    			    <div class="cell">
+    			    <!-- <div class="cell">
     			        <button type="button" class="button orario-btn">21:00</button>
     			    </div>
     			    <div class="cell">
@@ -103,12 +119,12 @@
     			    </div>
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:45</button>
-    			    </div>
+    			    </div> -->
     			</div>
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" -hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -124,7 +140,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" -hidden>
+    	<div class="grid-container" hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
