--- a/menu.html
+++ b/menu.html
@@ -64,7 +64,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-                    <!-- <li><a href="#aperitivo">Aperitivo</a></li> -->
+                    <li><a href="#aperitivo">Aperitivo</a></li>
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#secondi">Secondi</a></li>
