--- a/menu.html
+++ b/menu.html
@@ -110,6 +110,7 @@
                             </div>
                         </div>
                     </div>
+                    <a class="button extra-space-button" href="riserva-un-tavolo.html">Riserva un Tavolo per l'aperitivo del 31 dicembre</a>
                 </div>
             </section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
