--- a/asporto.html
+++ b/asporto.html
@@ -57,8 +57,8 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
                 <div class="small-12 cell callout primary">
-                    <p><strong>Mercoledì 31 dicembre facciamo asporti dalle 18 alle 20.45</strong>.</p>  
-                    <p>Puoi ordinare il giorno stesso online o scrivendoci tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a>.</p>
+                    <p><strong>Mercoledì 31 dicembre </strong> asporti dalle 18:00 alle 21:00.</p>  
+                    <p>Puoi ordinare online o scrivendoci tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a>.</p>
                 </div>
     			<p hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
     		</div>
@@ -71,7 +71,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
-    			<div class="grid-x small-up-4 align-center extra-space">
+    			<div class="grid-x small-up-4 align-left extra-space">
                     <div class="cell">
                         <button type="button" class="button orario-btn">18:00</button>
                     </div>
@@ -108,10 +108,10 @@
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">20:45</button>
     			    </div>
-    			    <!-- <div class="cell">
+    			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:00</button>
     			    </div>
-    			    <div class="cell">
+    			    <!-- <div class="cell">
     			        <button type="button" class="button orario-btn">21:15</button>
     			    </div>
     			    <div class="cell">
