--- a/asporto.html
+++ b/asporto.html
@@ -59,6 +59,7 @@
                 <div class="small-12 cell callout primary">
                     <p><strong>Mercoledì 31 dicembre </strong> asporti dalle 18:00 alle 21:00.</p>  
                     <p>Puoi ordinare online o scrivendoci tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a>.</p>
+                    <p>Il menù aperitivo è solo per il consumo  presso il locale: no asporto.</p>
                 </div>
     			<p hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
     		</div>
