--- a/asporto.html
+++ b/asporto.html
@@ -65,10 +65,10 @@
             </div> -->
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-left extra-space">
-                    <div class="cell">
+                    <!-- <div class="cell">
                         <button type="button" class="button orario-btn">18:00</button>
                     </div>
                     <div class="cell">
@@ -79,7 +79,7 @@
                     </div>
                     <div class="cell">
                         <button type="button" class="button orario-btn">18:45</button>
-                    </div>
+                    </div> -->
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">19:00</button>
     			    </div>
@@ -107,7 +107,7 @@
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:00</button>
     			    </div>
-    			    <!-- <div class="cell">
+    			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:15</button>
     			    </div>
     			    <div class="cell">
@@ -115,12 +115,12 @@
     			    </div>
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:45</button>
-    			    </div> -->
+    			    </div>
     			</div>
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" -hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -136,7 +136,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" hidden>
+    	<div class="grid-container" -hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
