--- a/asporto.html
+++ b/asporto.html
@@ -56,8 +56,13 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<p -hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
+    			<p hidden>Dal venerdì alla domenica, dalle 19 alle 21.45.</p>
     		</div>
+            <div class="small-12 cell callout primary"> 
+                <p><strong>Lunedì 5 gennaio</strong> aperti anche per asporti dalle 19 alle 21.45.</p>
+                <!-- <p>Non accettiamo prenotazioni.</p>
+                <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a> -->
+            </div>
             <!-- <div class="small-12 cell callout primary"> 
                 <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
                 <p>Non facciamo asporti.</p>
