--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
     				<h1 class="first-paragraph">Orari</h1>
     			</div>
     		</div>
-            <!-- <div class="small-12 cell callout primary"> 
-                <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
-                <p>Non accettiamo prenotazioni.</p>
-                <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
-            </div> -->
+            <div class="small-12 cell callout primary"> 
+                <p><strong>Lunedì 5 gennaio</strong> aperti dalle 19 alle 22.</p>
+                <p>Aperti per cena e asporto.</p>
+                <!-- <p>Non accettiamo prenotazioni.</p>
+                <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a> -->
+            </div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 medium-6 cell">
     				<h2>Ristorante</h2>
