--- a/menu.html
+++ b/menu.html
@@ -296,7 +296,7 @@
     							</div>
     						</div>
     					</div> -->
-    				    <div class="cell">
+    				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -304,7 +304,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno con panatura leggermente speziata, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
