--- a/menu.html
+++ b/menu.html
@@ -403,7 +403,7 @@
     							</div>
     						</div>
     					</div> 
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CostineBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine BBQ">
@@ -411,7 +411,7 @@
     								<p>Costine di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Glutine, Pesce, Semi di Sesamo, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
