--- a/menu.html
+++ b/menu.html
@@ -346,7 +346,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Tonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Tonno">
@@ -356,7 +356,7 @@
     						</div>
     					</div>
     				</div>
-    			</div>
+    			</div> -->
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
