--- a/menu.html
+++ b/menu.html
@@ -296,7 +296,7 @@
     							</div>
     						</div>
     					</div> -->
-    				    <!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -304,7 +304,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno con panatura leggermente speziata, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -346,7 +346,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+        				<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Tonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Tonno">
@@ -355,7 +355,7 @@
     							</div>
     						</div>
     					</div>
-    				</div> -->
+    				</div>
     			</div> 
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
