--- a/menu.html
+++ b/menu.html
@@ -666,14 +666,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Extrema Ratio<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 7,4%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				</div>
     			</div>
     			<div class="small-12 cell">
@@ -751,14 +751,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Marina 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. American Pale Ale 6,4%. Birra ambrata, luppolata, decisa e complessa. L'abbondante luppolo dona profumi e sapori esotici e un amaro persistente.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
