--- a/menu.html
+++ b/menu.html
@@ -778,7 +778,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Spaispigs 50cl<span class="price ">6,5</span></h3>
+                                    <h3>Speispigs 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Doppia IPA 8%. Double IPA Birra luppolata in modo prepotente. Si presenta velata, con un corpo pieno e un amaro gentile.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
