--- a/menu.html
+++ b/menu.html
@@ -779,7 +779,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Speispigs 50cl<span class="price ">6,5</span></h3>
-                                    <p class="">Birrificio Mukkeller. Doppia IPA 8%. Double IPA Birra luppolata in modo prepotente. Si presenta velata, con un corpo pieno e un amaro gentile.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p class="">Birrificio Mukkeller. Doppia IPA 8%. Birra luppolata in modo prepotente. Si presenta velata, con un corpo pieno e un amaro gentile.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
