--- a/menu.html
+++ b/menu.html
@@ -556,14 +556,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Estathé Pesca<span class="price ">3,5</span></h3>
                                     <p class="">Tè alla pesca 40cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
