--- a/menu.html
+++ b/menu.html
@@ -767,14 +767,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 7,1%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
